syntax = "proto2";
package msg;
import "serialize.proto";

// 添加收货地址
message C2GW_AddDeliveryAddress {
    optional msg.UserAddress info = 1;
}

// 删除地址
message C2GW_DelDeliveryAddress {
    optional uint32 index = 1;
}

// 修改地址
message C2GW_ChangeDeliveryAddress {
    optional uint32 index = 1;
    optional msg.UserAddress info = 2;
}

// 同步地址列表
message GW2C_SendDeliveryAddressList {
    repeated msg.UserAddress list = 1;
}

// 货物信息
message DeliveryGoods {
    optional uint32 itemid = 1;
    optional uint32 num = 2;
}

// 请求提货
message C2GW_ReqDeliveryGoods {
    repeated DeliveryGoods list = 1;
    optional string token = 2;
}

